 -- @timewarp/queue advanced a queued command's displayed time (as seen
    by @ps), but did not update the run time of the underlying task, so
    the command did not execute any sooner (Issue 172).
 -- Protect qsort() from invalid arguments that should not happen
    (Issue 125 and 159).
 -- Add 'GameFull' reason which should never be referenced, but it
    suppresses a compiler warning (Issue 148).
 -- Remove arbitrary constant, 1000, and re-work @forwardlist codepaths
    (Issue 168 and 175).
 -- Suppress compiler warning in anum_extend() and compact code
    (Issues 169 and 170).
 -- Suppress compiler warning in add_helpfile() (Issue 165).
 -- Corrected 'shutodnw' typo in 'wizhelp signals' (Issue 177).
 -- Add checking and warning messages for next free attribute, range of
    numbers used with names, and range of numbers used with objects
    (Issues 176, 180, and 181).
 -- Require flagnames to be at least 1 character (Issue 183).
 -- Fix @flag wizhelp topic (Issue 182).
 -- Suppress compiler warning in conf.cpp (Issue 164).
 -- Suppress compiler warning in command.cpp (Issue 149).
 -- Write mux_open() to avoid direct use of open() (Issue 121).
 -- Remove all calls to fscanf() in mail.cpp and comsys.cpp (Issue 119).
 -- Fixed color leak in object names for @find, examine, inventory, and
    look when length of ANSI sequence exceeded 200 byte (Issue 184).
    Reported by K Hall.  Not a crashing issue.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.


Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().